--- a/index.html
+++ b/index.html
@@ -40,6 +40,46 @@
                 <a>Contact</a>
             </li>
         </div>
+        <!--BANNER Section-->
+        <div>
+            <div class="PresentationGrid">
+                <div class="Presentationleft">
+                    <h1>Alejandro Ruiz</h1>
+                    <p>Lead Marketing Automation Manager | Marketo Expert | Team Leader | Data Analyst | Web Developer</p>
+                </div>
+                <div class="HeroImage">
+                    <img src="./Assets/Daco_5426715.png" alt="web developer">
+                </div>
+            </div>
+        </div>
     </header>
+    <main>
+    <!--About Section-->
+        <div class="AboutSection">
+            <div class="AboutMe">
+                <li><strong>Education:</strong> Masters Degree in Senior Management</li>
+                <li><strong>Experience:</strong> +14 years</li>
+                <li><strong>Phone:</strong> +52 1 3313987527</li>
+                <li><strong>Leardership:</strong> +20 People Lead</li>
+                <li><strong>English:</strong> Advanced</li>
+                <li><strong>Birthday:</strong> 30 Jan 1987</li>
+            </div> 
+            <div class="ProfilePic">
+                <img src="./Assets/Mephotoframe.png" alt="Profile Pic">
+                <p>Alex</p>
+            </div>
+           
+            <div class="Experience">
+                <p>Master's graduate with vast experience in the areas of marketing automation, data analytics, web development, people management & pricing. 
+                </br>Strong analytical skills, great creativity and relentless mindset for process improvement.
+                    Passion for the audiovisual arts & winner of several awards for academic & professional performance.</p>
+            </div>
+        </div>
+    <!--Skills Section-->
+        <div class="SkillSection">
+
+        </div>
+    </main>
+
 </body>
 </html>
