--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-person-fill" viewBox="0 0 16 16">
                     <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
                 </svg>
-              <a>About</a>
+              <a href="#AboutSection">About</a>
             </li>
             <li class="Skills Icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-award-fill" viewBox="0 0 16 16">
@@ -45,7 +45,7 @@
             <div class="PresentationGrid">
                 <div class="Presentationleft">
                     <h1>Alejandro Ruiz</h1>
-                    <p>Lead Marketing Automation Manager | Marketo Expert | Team Leader | Data Analyst | Web Developer</p>
+                    <p>Lead Marketing Automation Manager | Marketo Expert </br> Team Leader | Data Analyst | Web Developer</p>
                 </div>
                 <div class="HeroImage">
                     <img src="./Assets/Daco_5426715.png" alt="web developer">
@@ -55,11 +55,12 @@
     </header>
     <main>
     <!--About Section-->
-        <div class="AboutSection">
+        <div class="AboutSection" id="AboutSection">
             <div class="AboutMe">
+                <h2><strong>About</strong></h2>
                 <li><strong>Education:</strong> Masters Degree in Senior Management</li>
                 <li><strong>Experience:</strong> +14 years</li>
-                <li><strong>Phone:</strong> +52 1 3313987527</li>
+                <li><strong>Phone:</strong> +52 1 3333333333</li>
                 <li><strong>Leardership:</strong> +20 People Lead</li>
                 <li><strong>English:</strong> Advanced</li>
                 <li><strong>Birthday:</strong> 30 Jan 1987</li>
@@ -77,7 +78,17 @@
         </div>
     <!--Skills Section-->
         <div class="SkillSection">
-
+            <h2>Skills</h2>
+            <ul class="cloud" role="navigation" aria-label="Webdev tag cloud">
+                <li>Marketo</li>
+                <li>Javascript</li>
+                <li>HTML</li>
+                <li>Premiere Pro</li>
+                <li>Excel</li>
+                <li>Dynamics 365</li>
+                <li>Power BI</li>
+                <li>CSS</li>
+            </ul>
         </div>
     </main>
 
