Changes to CSS and html

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
         </div>
 
 <!--Experience Section-->
+        <h2 class="ExpH2">Experience</h2>   
         <div class="JobExperience">
-            <h2 class="ExpH2">Experience</h2>
-            <div class="LeadMkt">
-                <p><strong>Lead Marketing automation Manager</strong></br>Panduit</br>March 2024 - Present</p>
+            <div class="first content">
+                <p><span><strong>Lead Marketing Automation Manager</strong></span></br>Panduit</br>March 2024 - Present</p>
                 <ul>
                     <li>Lead the marketing automation team and project leader for all marketing automation projects. </li>
                     <li>Creation of the governance structure for the marketing automation team.</li>
@@ -122,8 +122,53 @@
                     <li>Building, deploying, and monitoring critical demand generation programs, such as engagement programs, trigger, and batch campaigns, email, webinar, and live event programs.</li>
                 </ul>
             </div>
+            <div class="second content">
+                <p><span><strong>Marketing Automation & Analytics Manager</strong></span></br>Panduit</br>Feb 2018 - Mar 2024</p>
+                <ul>
+                    <li>Deliver reporting and analysis on program performance, conversion, attribution, and effectiveness, including marketing revenue generation. </li>
+                    <li>Maintaining data hygiene to ensure accurate segmentation and targeting. </li>
+                    <li>I partner with internal stakeholders, in North America,LATAM, EMEA & APAC, to execute best in class Marketo programs in support of the buyer journey, including demand generation and pipeline acceleration.</li>
+                    <li>Provides global support for all Marketo users in regards of best practices, troubleshooting, reporting and execution within the platform and other integrated platforms. </li>
+                    <li>Responsible for all Marketo integrations with other platforms and systems</li>
+                    
+                </ul>
+            </div>
+            <div class="third content">
+                <p><span><strong>Pricing Supervisor</strong></span></br>Panduit</br>Aug 2015 - Jan 2018</p>
+                <ul>
+                    <li>Supervise the Pricing team and I provide leadership and support within the department. Ensuring high quality customer experiences, productivity, and quality standards meeting stablished KPI's.</li>
+                    <li>Processes standardization, continuous improvement projects, process mapping, and more.</li>
+                    <li>Service Level Agreement (SLA) creation, KPI's based on turnaround time and quality, quarterly customer satisfaction surveys.</li>
+                    <li> Individual Development Plans (IDP) for team members, knowledge transfer plans, training paths as well as career plans creation. Develop retention plans.</li>
+                    <li>Creation of back-up plans, risks analysis, process documentation, turtle & Ishikawa diagrams creation & analysis.</li>
+                </ul>
+            </div>
+            <div class="fourth content">
+                <p><span><strong>Reporting Administrator</strong></span></br>Panduit</br>Feb 2013 - Jul 2015</p>
+                <ul>
+                    <li>Creation, maintenance, analysis, and distribution of reports for different areas of the company to facilitate the decision-making process, accelerate administrative processes and track team performance (KPI).</li>
+                    <li>Understanding and analysis of the interaction within the areas of sales, pricing, customer service, supply chain, among others./li>
+                    <li>Gather insights & feedback from different stakeholders across all levels of the organization to understand their business needs and transform them into visual aids for critical decision making.</li>
+                    <li>Sap business objects · Microsoft Excel · KPI Reporting · Tableau · Data Analysis · Oracle E-Business Suite</li>
+                </ul>
+            </div>
+            <div class="fifth content">
+                <p><span><strong>Pricing Coordinator</strong></span></br>Panduit</br>Sep 2010 - Feb 2013</p>
+                <ul>
+                    <li>Processing of Special pricing requests, which are part of the business model of the company.</li>
+                    <li>Strategic Analysis of the special price agreements, based on the profit margin, competitive pricing, material used, etc.</li>
+                    <li>Constant Interaction and negotiation with Sales Force in the US, Canada and Latin America.</li>
+                    <li>Role as co - leader of the team performing activities such as training new employees, continuos improvement projects and development of courses for training..</li>
+                </ul>
+            </div>
+            <div class="sixth content">
+                <p><span><strong>Audivisual Producer</strong></span></br>UdeG</br>Mar 2008 - Dec 2008</p>
+                <ul>
+                    <li>Videoclips and TV programs development for the CUCEA channel through the creation of scripts as well as recording and video editing.</li>
+                    <li>Constant generation of ideas that would allow to increase the interest of the student population for the TV channel.</li>
+                    <li>Creativity Skills · Adobe Premiere Pro · Adobe Photoshop · video recording.</li>
+            </div>
         </div>
-
     </main>
 
 </body>
